# 2DGame

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  todo.txt
archive/art/: Untitled.xcf
build-emscripten/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
build-emscripten/lib/glad/: Makefile  cmake_install.cmake
build-emscripten/lib/libsndfile/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  SndFileTargets.cmake  cmake_install.cmake  sndfile.pc
build-emscripten/lib/libsndfile/src/: config.h
build-emscripten/lib/openal-soft/: CTestTestfile.cmake  Makefile  OpenALTargets.cmake  cmake_install.cmake  config.h  config_backends.h  openal.pc
build-emscripten/lib/openal-soft/fmt-11.1.4/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-emscripten/lib/openal-soft/utils/alsoft-config/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/ALHelpers/: alhelpers.c  alhelpers.h
lib/glad/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  glad.sln  glad.vcxproj  glad.vcxproj.filters
lib/glad/Debug/: glad.lib
lib/glad/glad.dir/Debug/: glad.lib.recipe
lib/glad/glad.dir/Debug/glad.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
lib/glad/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
lib/glad/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
lib/glad/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
release/res/shaders/: background.frag  background.vert  particle.frag  particle.vert  postprocess.vert  sprite.frag
res-web/shaders/: font.frag  particle.frag  postprocess.vert  sprite.frag
res/art/: Untitled.xcf
res/maps/: test.map
res/shaders/: background.frag  font.frag  font.vert  particle.frag  postprocess.frag  tile.frag
src/: entity.h  main.c  main.h  state.h
src/game/: collision.c  collision.h
src/gfx/: animation.h  font.c  font.h  particle.c  particle.h  postprocess.c  postprocess.h  primitive.c  primitive.h  shader.c  shader.h  sprite_renderer.c  sprite_renderer.h  texture.c  texture.h
src/networking/: game_net_helpers.cppp  game_net_helpers.h  steam_helpers.cpp  steam_helpers.h
src/utils/: animation.c  debug_shapes.c  debug_shapes.h  entity.c  files.c  files.h  memory.c  memory.h  random.h  sound.c  sound.h  types.h  window.c  window.h
tools/: fontgen.html
